--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -6,4 +6,8 @@
   body {
     @apply bg-slate-950 text-slate-200 antialiased;
   }
+
+  p a {
+    @apply hover:text-white transition-colors font-medium underline underline-offset-2;
+  }
 }
