--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,13 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-  body {
-    @apply bg-slate-950 text-slate-200 antialiased;
-  }
-
-  p a {
-    @apply hover:text-white transition-colors font-medium underline underline-offset-2;
-  }
+div {
+  border: solid 1px red;
 }
